@@ -5,6 +5,7 @@ import com.example.client1.Models.Client;
 import com.example.client1.Models.Email;
 import com.google.gson.*;
 import javafx.application.Platform;
+import javafx.beans.property.ListProperty;
 import javafx.collections.FXCollections;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
@@ -21,7 +22,6 @@ import java.util.List;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 public class MenuController {
     private Client client;
@@ -69,7 +69,7 @@ public class MenuController {
         inbox_crocette.setCellValueFactory(cellData -> cellData.getValue().selectedProperty());
         inbox_crocette.setCellFactory(tc -> createCheckBoxTableCell());
 
-        inbox.setItems(client.mailListProperty());
+        inbox.itemsProperty().bind(client.mailListProperty());
 
         // Aggiungi il listener per la selezione delle righe nella TableView
         inbox.getSelectionModel().selectedItemProperty().addListener((obs, oldEmail, selectedEmail) -> {
@@ -125,8 +125,15 @@ public class MenuController {
         JsonObject data = new JsonObject();
         JsonObject mailData = new JsonObject();
 
-        // Invia l'account del client per recuperare la mailbox
+        String date = null;
+        ListProperty<Email> emails = client.mailListProperty();
+        if(!emails.isEmpty()){
+            emails.sort(null);
+            date = emails.get(0).getDate().toString();
+        }
+
         mailData.addProperty("sender", client.getAccount());
+        mailData.addProperty("lastChecked", date);
         data.addProperty("action", "GET_MAILBOX");
         data.add("data", mailData);
 
@@ -203,8 +210,7 @@ public class MenuController {
     private void updateMailList(List<Email> emails) {
         Platform.runLater(() -> {
             System.out.println("Aggiornamento casella di posta");
-            client.setMailList(FXCollections.observableArrayList(emails));
-            inbox.setItems(client.mailListProperty());
+            client.updateMailList(emails);
             System.out.println("Casella di posta aggiornata");
         });
     }
@@ -268,7 +274,7 @@ public class MenuController {
 
     public void populateTable() {
         try {
-            inbox.setItems(client.mailListProperty());
+            //inbox.setItems(client.mailListProperty());
         } catch (Exception e) {
             showError("Errore durante il popolamento della tabella");
         }
@@ -305,8 +311,7 @@ public class MenuController {
     public void replyFowardEmail(ActionEvent e) {
         // Filtra le email selezionate tramite la checkbox
         List<Email> selectedEmails = client.getMailList().stream()
-                .filter(Email::isSelected)
-                .collect(Collectors.toList());
+                .filter(Email::isSelected).toList();
 
         // Verifica che sia selezionata esattamente una email
         if (selectedEmails.size() != 1) {
